--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,15 +10,14 @@ jobs:
     runs-on: ubuntu-latest
     environment: 
       name: ENG
-    
    
     steps:
     - name: Run a one-line script
       if: vars.ENV1 == 'toto'
       run: |
-        echo "test de variable OK : " {{ vars.ENV1 }}
+        echo "test de variable OK : " ${{ vars.ENV1 }}
 
     - name: display vars
       run: |
-        echo "Var ENV1 : " {{ vars.ENV1 }}
+        echo "Var ENV1 : " ${{ vars.ENV1 }}
 
