--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Run a one-line script
       if: vars.ENV1 == 'toto' && vars.ENV2 == 'titi'
       run: |
-        echo "test de variables OK : " format('{{Hello {0} {1} {2}!}}', 'Mona', 'the', 'Octocat')
+        echo "test de variables OK : " ${{ format('{{Hello {0} {1} {2}!}}', 'Mona', 'the', 'Octocat') }}
         
         #format('{{ Var {0} {1} {2} }}', {{ vars.ENV1 }}, '-', {{ vars.ENV2 }})
 
